fix: z-index

--- a/src/pages/wall/components/WallGL.less
+++ b/src/pages/wall/components/WallGL.less
@@ -7,5 +7,4 @@
 canvas#butterfly {
     position: absolute;
     top: 0;
-    z-index: -1;
 }
